<resources>
    <string name="app_name">Parking Management</string>

    <string name="nav_home">Home</string>
    <string name="nav_favorite">Favorite</string>
    <string name="nav_history">History</string>
    <string name="nav_account">Account</string>
    <string name="nav_my_profile">My Profile</string>
    <string name="nav_change_password">Change Password</string>
    <string name="nav_log_out">Log out</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="toast_backpress">Nhấn lại lần nữa để thoát</string>
    <string name="nav_input">Xe vào</string>
    <string name="nav_output">Xe ra</string>
    <string name="hint_plate_numbers">Biển số xe</string>
    <string name="hint_db_plate_numbers">Biển số xe đăng ký</string>
    <string name="hint_input_plate_numbers">Biển số xe vào</string>
    <string name="hint_output_plate_numbers">Biển số xe ra</string>
    <string name="hint_ca_number">Số thẻ</string>
    <string name="hint_ca_no">Mã thẻ</string>
    <string name="hint_input_time">Giờ vào</string>
    <string name="hint_time_output">Giờ ra</string>
    <string name="hint_price">Thành tiền</string>
    <string name="btn_submit_input">Vào</string>
    <string name="btn_submit_output">Ra</string>
    <string name="btn_skip">Bỏ qua</string>
    <string name="bicycle">Xe đạp</string>
    <string name="motorbike">Xe máy</string>
    <string name="car">Ô tô</string>
    <string name="notification">Thông báo</string>
    <string name="error">Lỗi</string>
    <string name="ok">Ok</string>
    <string name="close">Đóng</string>
    <string name="notification_card_not_register">Thẻ chưa đăng ký.</string>
    <string name="notification_card_not_active">Thẻ không hoạt động.</string>
    <string name="notification_not_is_inputted">Không có xe nào trong bãi.</string>
    <string name="notification_card_expired">Thẻ chưa được phép hoặc hết hạn sử dụng.</string>
    <string name="notification_card_not_pay">Xe chưa nộp tiền tháng.</string>
    <string name="warning">Cảnh báo</string>
    <string name="warning_plate_numbers_not_verify">Biển số xe vào không khớp.\nBạn có muốn tiếp tục không?</string>
    <string name="accept">Đồng ý</string>
    <string name="cancel">Hủy</string>
    <string name="hint_username">Tên đăng nhập</string>
    <string name="hint_admin">admin</string>
    <string name="hint_password">Mật khẩu</string>
    <string name="warning_login_require">Điền đầy đủ tên đăng nhập và mật khẩu.</string>
    <string name="login_failed">Đăng nhập thất bại</string>
    <string name="success">Thành công</string>
    <string name="failed">Thất bại</string>
</resources>